--- a/src/components/aboutus/about.css
+++ b/src/components/aboutus/about.css
@@ -45,6 +45,7 @@ text-transform: capitalize;
 @media screen and (max-width: 786px){
     .part1{
         display: none;
+        width: 20%;
     }
     .part2{
         width: 90%;
