--- a/src/components/welcome/mint/timer.css
+++ b/src/components/welcome/mint/timer.css
@@ -9,3 +9,9 @@
   }.countdown-text{
       font-size: 1vw;
   }
+
+  @media screen and (max-width: 786px){
+    .countdown-text{
+        font-size: 2.5vw;
+    }
+}
