--- a/src/components/welcome/welcome.css
+++ b/src/components/welcome/welcome.css
@@ -3,10 +3,7 @@
     margin-top: 0%;
     width: 60%;
     margin: 5%;
-    display: inline-block;
-
-    
-   
+    display: inline-block;   
 }
 .welcome-div2{
     width: 30%;
@@ -32,4 +29,18 @@
     color: white;
     font-size: 2vw;
 
+}
+
+@media screen and (max-width: 786px){
+    .welcome-div1{
+        width:90%;
+        text-align: center;
+        margin-top: 10%;
+    }
+    .welcome-div2{
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
 }
