--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   text-align: center;
-  background: linear-gradient(179.93deg, #000418 0.06%, rgba(0, 0, 0, 0) 351.99%);
+  background: linear-gradient(
+    179.93deg,
+    #000418 61.69%,
+    rgba(63, 255, 209, 0.5) 351.99%
+  );
   width: 100%;
   position: absolute;
   top: 0;
@@ -10,6 +14,7 @@
   min-width: 100%;
   min-height: 100%;
   color: white;
+  align-content: center;
 }
 
 .App-logo {
