--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -28,4 +28,20 @@
 
 }.linkedin-logo{
     cursor: pointer;
+
 }
+/* .team-text{
+    font-size: 1vw;
+}
+.team-image{
+    width: 50%;
+}@media screen and (max-width: 840px){
+    .team-text{
+        font-size: 3vw;    }
+}.team-image{
+    width: 100%;
+}.linkedin-logo{
+    width: 10%;
+}.team-name{
+    float: none;
+}  */
