--- a/src/components/welcome/mint/timer.css
+++ b/src/components/welcome/mint/timer.css
@@ -8,10 +8,8 @@
     
   }.countdown-text{
       font-size: 1vw;
+  }@media screen and (max-width: 840px){
+      .countdown-text{
+          font-size: 2.5vw;
+      }
   }
-
-  @media screen and (max-width: 786px){
-    .countdown-text{
-        font-size: 2.5vw;
-    }
-}
