--- a/src/components/aboutus/about.css
+++ b/src/components/aboutus/about.css
@@ -4,7 +4,7 @@
     vertical-align: top;
 }.about-heading{
     margin-top: 10%;
-    font-family: 'Poppins';
+    
     text-transform: uppercase;
 	background: linear-gradient(to right, #3FFF47 0%, #3FFFD1
     100%);
@@ -20,6 +20,7 @@
 .img2{
    width: 40%;
    display: inline-block;
+   margin-left: 10%;
 }
 
 .part2{
@@ -29,22 +30,23 @@
    margin-left: 5%;
    display: inline-block;
    text-align: left;
-   font-family: 'Poppins';
+   font-family: harmattan;
 font-style: normal;
 text-align: justify;
 text-transform: capitalize;
 
 }.allimg1{
-    margin: 12%;
+    margin: 13%;
     margin-top: 0;
+    width: 100%;
 }
 .allimg{
-    
+    width: 100%;
     margin-left: 0%;
 }
 @media screen and (max-width: 786px){
     .part1{
-        display: none;
+        width: 90%;
     }
     .part2{
         width: 90%;
