--- a/src/components/welcome/mint/mintButton.css
+++ b/src/components/welcome/mint/mintButton.css
@@ -1,6 +1,6 @@
 .mint-button{
     background: linear-gradient(90.02deg, #3FFF47 16.37%, #3FFFD1 133.93%);
-
+    font-family: harmattan;
     border-radius: 5px;
     width: 90%;
     padding: 10px;
