--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,19 @@
   min-height: 100%;
   color: white;
   align-content: center;
+  font-family: gos;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}@font-face{
+  font-family: harmattan;
+  src: url(./Harmattan.ttf);
+}
+@font-face {
+  font-family: gos;
+  src: url(./gos.ttf);
 }
 
 @media (prefers-reduced-motion: no-preference) {
