--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,5 +1,5 @@
 .sl-container {
-    margin-top: 30px;
+    margin-top: 0px;
   }
   .sl-logo {
     margin-top: 0px;
@@ -11,7 +11,7 @@
     margin-top: 20px;
   }
   #menu {
-    background-color: rgba(0, 0, 0, 0.466);
+    background-color: rgb(0, 0, 0);
   position: fixed;
   width: 100%;
   height: 8%;
@@ -107,6 +107,7 @@
       #menu ul.sub-menus {
       width: 100%;
       position: static;
+      background-color: transparent;
     }
     #menu ul.sub-menus a {
       padding-left:0;
@@ -117,16 +118,17 @@
     
     .sl-logo {
       margin-left: 0;
+      
     }
     .connect-button {
       float: none;
     }
     #menu ul {
-      background: transparent;
+      background: black;
       position: absolute;
-      top: 50px;
+      top: 10px;
       right: 0;
-      left: -10%;
+      left: 0%;
       width: 100%;
       height: auto;
       display: none;
@@ -136,13 +138,13 @@
       float: right;
       width: 100%;
       padding: 10px;
-      margin: 1px;
-      background-color: rgb(105, 101, 101);
+      margin-top: 0px;
+      background-color: black;
     }
     #menu input,
     #menu label {
       position: absolute;
-      top: 30px;
+      top: 10px;
       right: 4%;
       display: block;
       color: white;
@@ -160,7 +162,5 @@
     }
     #menu input:checked ~ ul {
       display: block;
-    }.connect-button{
-      top: 0px;
     }
   }
