--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -113,7 +113,7 @@
     }
      */
      .faq-heading{
-        font-family: 'Poppins';
+       
         text-transform: uppercase;
         background: linear-gradient(to right, #3FFF47 0%, #3FFFD1
         100%);
@@ -128,6 +128,7 @@
         background-color: transparent;
         color: white;
         width: 80%;
+        font-family: harmattan;
         padding: 1rem;
         margin-bottom: 2%;
         outline: none;
