--- a/src/components/roadmap/roadmap.css
+++ b/src/components/roadmap/roadmap.css
@@ -1,5 +1,5 @@
 .roadmap-heading{
-    font-family: 'Poppins';
+    
     text-transform: uppercase;
 	background: linear-gradient(to right, #3FFF47 0%, #3FFFD1
     100%);
@@ -25,6 +25,7 @@
     color: white;
     font-size: 1.5vw;
     padding: 5px;
+    font-family: harmattan;
 }
 .circular-div{
     border: 3px solid;
