--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -6,7 +6,7 @@
 }.team{
     margin-top: 10%;
 }.team-heading{
-    font-family: 'Poppins';
+   
     text-transform: uppercase;
     margin-bottom: 4%;
 	background: linear-gradient(to right, #3FFF47 0%, #3FFFD1
@@ -19,29 +19,25 @@
     display: inline-block;
     border: 3px solid ;
  border-image: linear-gradient(to right, #3FFF47
-
  , #3EF7D2
  ) 1;
 }.team-name{
     float: right;
     text-align: left;
+    font-family: harmattan;
 
 }.linkedin-logo{
     cursor: pointer;
 
-}
-/* .team-text{
-    font-size: 1vw;
-}
-.team-image{
-    width: 50%;
+
 }@media screen and (max-width: 840px){
     .team-text{
         font-size: 3vw;    }
-}.team-image{
-    width: 100%;
-}.linkedin-logo{
-    width: 10%;
-}.team-name{
-    float: none;
-}  */
+        .team-image{
+            width: 100%;
+        }.linkedin-logo{
+            width: 10%;
+        }.team-name{
+            float: none;
+        }
+}
