--- a/src/components/welcome/mint/timer.css
+++ b/src/components/welcome/mint/timer.css
@@ -5,9 +5,11 @@
     width: 11%;
     height: 20px;
     text-align: center;
+    font-family: harmattan;
     
   }.countdown-text{
       font-size: 1vw;
+      font-family: harmattan;
   }@media screen and (max-width: 840px){
       .countdown-text{
           font-size: 2.5vw;
