--- a/src/components/welcome/welcome.css
+++ b/src/components/welcome/welcome.css
@@ -17,11 +17,10 @@
 
 .welcome-heading{
     color: white;
-    font-family: 'Poppins';
     font-size: 6vw;
 }
 .welcome-heading1{
-    font-family: 'Poppins';
+    
     font-size: 6vw;
     text-transform: uppercase;
 	background: linear-gradient(to right, #3FFF47 0%, #3FFFD1
@@ -31,7 +30,7 @@
 }.welcome-text{
     color: white;
     font-size: 2vw;
-
+    font-family: harmattan;
 }
 @media screen and (max-width: 840px){
     .welcome-div2{
