--- a/src/components/roadmap/roadmap.css
+++ b/src/components/roadmap/roadmap.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 300px;
     border: 3px solid;
-   
+   text-align: left;
     border-image: linear-gradient(to right, #3FFF47
  , #3EF7D2
  ) 1;
@@ -25,6 +25,7 @@
     color: white;
     font-size: 1.5vw;
     padding: 5px;
+    margin-left: 5%;
     font-family: harmattan;
 }
 .circular-div{
