--- a/src/components/onramper/onramper.css
+++ b/src/components/onramper/onramper.css
@@ -1,4 +1,19 @@
-.onramper-div{
+.onramper-button{
+    background:linear-gradient(90.02deg, #3FFF47 16.37%, #3FFFD1 133.93%);
+border-radius: 5px;
+cursor: pointer;
+border: 0px;
+padding: 10px;
+color: black;
+font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15.2222px;
+  float: right;
+  margin-top: 1%;
+  margin-right: 2%;
+}.onramper-div{
+    z-index: 3;
     display: flex; 
     justify-content: center;
      padding: 15px;
@@ -26,4 +41,12 @@
   }
   [data-popup='tooltip'].popup-overlay {
     background: transparent;
-  }
+  }@media screen and (max-width: 840px){
+    .onramper-button{
+        float: none;
+        margin-right: 0;
+        margin-top: 2%
+        ;
+        margin-left: -10%;
+    }
+}
