--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -2,7 +2,7 @@
     display: inline-block;
     width: 25%;
     margin: 2.5%;
-    text-align: right;
+    text-align: center;
 }.team{
     margin-top: 5%;
 }.team-heading{
@@ -22,8 +22,8 @@
  ) 1;
 }
 .team-text{
-    font-size: 1.5vw;
-    margin-left: 10%;
+    font-size: 1vw;
+    margin-left: -10%;
 }.team-name{
     float: right;
     text-align: left;
@@ -31,15 +31,17 @@
 
 }.linkedin-logo{
     cursor: pointer;
-    margin-left: 10%;
+    margin-left: -10%;
 
 }@media screen and (max-width: 840px){
     .team-text{
-        font-size: 3vw;    }
+        font-size: 3vw;
+    margin-left: 0;    }
         .team-image{
             width: 100%;
         }.linkedin-logo{
             width: 10%;
+            margin-left: 0;
         }.team-name{
             float: none;
         }
