--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -5,8 +5,9 @@
   .sl-logo {
     margin-top: 0px;
     float: left;
-    margin-left: 3%;
+    margin-left: 10px;
     width: 40px;
+    margin-top: 10px;
   }
   .sl-text {
     float: left;
