--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -143,11 +143,13 @@
         position: absolute;
         content: "+";
         right: 20px;
+        text-align: left;
       }
       details[open] > summary::after {
         position: absolute;
         content: "-";
         right: 20px;
+        text-align: left;
       }
       details > summary::-webkit-details-marker {
         display: none;
@@ -158,4 +160,8 @@
       @keyframes sweep {
         0%    {opacity: 0; margin-top: -10px}
         100%  {opacity: 1; margin-top: 0px}
+      }.faq__content{
+          width: 80%;
+          text-align: left;
+          margin-left: 10%;
       }
