--- a/src/components/onramper/onramper.css
+++ b/src/components/onramper/onramper.css
@@ -17,6 +17,8 @@ font-family: "Inter";
     display: flex; 
     justify-content: center;
      padding: 15px;
+     position:fixed;
+     right: 20%;
 }.onramper-iframe{
     --border-radius: 10px; 
     box-shadow: 0 2px 10px 0 rgba(0,0,0,.20); 
@@ -48,5 +50,8 @@ font-family: "Inter";
         margin-top: 2%
         ;
         margin-left: -10%;
+    }.onramper-div{
+        right: 0;
+        width: 80%;
     }
 }
