--- a/src/components/welcome/welcome.css
+++ b/src/components/welcome/welcome.css
@@ -29,7 +29,7 @@
 	-webkit-text-fill-color: transparent;
 }.welcome-text{
     color: white;
-    font-size: 1.5vw;
+    font-size: 20px;
     font-family: harmattan;
 }
 @media screen and (max-width: 840px){
@@ -46,7 +46,7 @@
     .welcome-div1{
         margin-top: 20%;
     }.welcome-text{
-        font-size: 3vw;
+        font-size: 20px;
     }.welcome-heading{
         font-size: 8vw;
     }.welcome-heading1{
