--- a/src/components/aboutus/about.css
+++ b/src/components/aboutus/about.css
@@ -52,7 +52,7 @@ text-transform: capitalize;
     }
     .part2{
         width: 90%;
-        text-align: center;
+        text-align: left;
         margin: 5%;
         font-size: 15px;
     }.about-heading{
